--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <header class="header">
       <div class="container header-container">
         <nav class="nav">
-          <a class="logo" href="./index.html"
+          <a class="logo header-logo" href="./index.html"
             >Web<span class="logo-span">Studio</span></a
           >
           <ul class="menu">
@@ -62,48 +62,52 @@
     <main>
       <!-- section 1 -->
       <section class="hero">
-        <h1 class="title">Effective Solutions for Your Business</h1>
-        <button class="btn" type="button">Order Service</button>
+        <div class="container">
+          <h1 class="title">Effective Solutions for Your Business</h1>
+          <button class="btn" type="button">Order Service</button>
+        </div>
       </section>
       <!-- endsection  1-->
       <!-- section 2 -->
-      <section>
-        <h2 class="title-small">What we are</h2>
-        <ul>
-          <li>
-            <h3 class="title-many">Strategy</h3>
-            <p class="inside">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li>
-            <h3 class="title-many">Punctuality</h3>
-            <p class="inside">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li>
-            <h3 class="title-many">Diligence</h3>
-            <p class="inside">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li>
-            <h3 class="title-many">Technologies</h3>
-            <p class="inside">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+      <section class="ares">
+        <div class="container">
+          <h2 class="title-small visually-hidden">What we are</h2>
+          <ul class="ares-list">
+            <li class="ares-list-item">
+              <h3 class="title-many">Strategy</h3>
+              <p class="inside">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="ares-list-item">
+              <h3 class="title-many">Punctuality</h3>
+              <p class="inside">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="ares-list-item">
+              <h3 class="title-many">Diligence</h3>
+              <p class="inside">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="ares-list-item">
+              <h3 class="title-many">Technologies</h3>
+              <p class="inside">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- endsection 2 -->
       <!-- section 3 -->
       <section class="team">
-        <h2 class="title-small">Our Team</h2>
+        <h2 class="title-small team-title">Our Team</h2>
         <ul class="ul-team">
           <li class="li-team">
             <img
@@ -112,8 +116,10 @@
               width="264"
               height="260"
             />
-            <h3 class="title-many">Mark Guerrero</h3>
-            <p class="inside">Product Designer</p>
+            <div class="text-container">
+              <h3 class="title-many">Mark Guerrero</h3>
+              <p class="inside">Product Designer</p>
+            </div>
           </li>
           <li class="li-team">
             <img
@@ -122,8 +128,10 @@
               width="264"
               height="260"
             />
-            <h3 class="title-many">Tom Ford</h3>
-            <p class="inside">Frontend Developer</p>
+            <div class="text-container">
+              <h3 class="title-many">Tom Ford</h3>
+              <p class="inside">Frontend Developer</p>
+            </div>
           </li>
           <li class="li-team">
             <img
@@ -132,8 +140,10 @@
               width="264"
               height="260"
             />
-            <h3 class="title-many">Camila Garcia</h3>
-            <p class="inside">Marketing</p>
+            <div class="text-container">
+              <h3 class="title-many">Camila Garcia</h3>
+              <p class="inside">Marketing</p>
+            </div>
           </li>
           <li class="li-team">
             <img
@@ -142,89 +152,107 @@
               width="264"
               height="260"
             />
-            <h3 class="title-many">Daniel Wilson</h3>
-            <p class="inside">UI Designer</p>
+            <div class="text-container">
+              <h3 class="title-many">Daniel Wilson</h3>
+              <p class="inside">UI Designer</p>
+            </div>
           </li>
         </ul>
       </section>
       <!-- endsection 3  -->
       <!-- section 4 -->
       <section>
-        <h2 class="title-small">Our Portfolio</h2>
-        <ul>
-          <li>
-            <img
-              src="./images/banking-app.jpg"
-              alt="banking-app"
-              width="360"
-              height="300"
-            />
-            <h3 class="title-many">Banking App</h3>
-            <p class="inside">App</p>
-          </li>
-          <li>
-            <img
-              src="./images/cashless-payment.jpg"
-              alt="cashless-payment"
-              width="360"
-              height="300"
-            />
-            <h3 class="title-many">Cashless Payment</h3>
-            <p class="inside">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/meditation-app.jpg"
-              alt="meditation-app"
-              width="360"
-              height="300"
-            />
-            <h3 class="title-many">Meditation App</h3>
-            <p class="inside">App</p>
-          </li>
-          <li>
-            <img
-              src="./images/taxi-service.jpg"
-              alt="taxi-service"
-              width="360"
-              height="300"
-            />
-            <h3 class="title-many">Taxi Service</h3>
-            <p class="inside">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/screen-illustrations.jpg"
-              alt="screen-illustrations"
-              width="360"
-              height="300"
-            />
-            <h3 class="title-many">Screen Illustrations</h3>
-            <p class="inside">Design</p>
-          </li>
-          <li>
-            <img
-              src="./images/online-courses.jpg"
-              alt="online-courses"
-              width="360"
-              height="300"
-            />
-            <h3 class="title-many">Online Courses</h3>
-            <p class="inside">Marketing</p>
-          </li>
+        <div class="container portfolio-container">
+          <h2 class="title-small portfolio-title">Our Portfolio</h2>
+          <ul class="portfolio-list">
+            <li class="portfolio-item">
+              <img
+                src="./images/banking-app.jpg"
+                alt="banking-app"
+                width="360"
+                height="300"
+              />
+              <div class="port-container">
+                <h3 class="title-many">Banking App</h3>
+                <p class="inside">App</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img
+                src="./images/cashless-payment.jpg"
+                alt="cashless-payment"
+                width="360"
+                height="300"
+              />
+              <div class="port-container">
+                <h3 class="title-many">Cashless Payment</h3>
+                <p class="inside">Marketing</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img
+                src="./images/meditation-app.jpg"
+                alt="meditation-app"
+                width="360"
+                height="300"
+              />
+              <div class="port-container">
+                <h3 class="title-many">Meditation App</h3>
+                <p class="inside">App</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img
+                src="./images/taxi-service.jpg"
+                alt="taxi-service"
+                width="360"
+                height="300"
+              />
+              <div class="port-container">
+                <h3 class="title-many">Taxi Service</h3>
+                <p class="inside">Marketing</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img
+                src="./images/screen-illustrations.jpg"
+                alt="screen-illustrations"
+                width="360"
+                height="300"
+              />
+              <div class="port-container">
+                <h3 class="title-many">Screen Illustrations</h3>
+                <p class="inside">Design</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img
+                src="./images/online-courses.jpg"
+                alt="online-courses"
+                width="360"
+                height="300"
+              />
+              <div class="port-container">
+                <h3 class="title-many">Online Courses</h3>
+                <p class="inside">Marketing</p>
+              </div>
+            </li>
+        </div>
         </ul>
       </section>
       <!-- endsection 4  -->
     </main>
     <!-- footer -->
     <footer class="footer">
-      <a class="logox" href="./index.html"
-        >Web<span class="logox-span">Studio</span></a
-      >
-      <p class="footer-inside">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container footer-container">
+        <a class="logox" href="./index.html"
+          >Web<span class="logox-span">Studio</span></a
+        >
+        <p class="footer-inside">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
     <!-- endfooter -->
   </body>
