--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
       </section>
       <!-- endsection 3  -->
       <!-- section 4 -->
-      <section>
+      <section class="portfolio">
         <div class="container portfolio-container">
           <h2 class="title-small portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-list">
