--- a/index.html
+++ b/index.html
@@ -107,57 +107,59 @@
       <!-- endsection 2 -->
       <!-- section 3 -->
       <section class="team">
-        <h2 class="title-small team-title">Our Team</h2>
-        <ul class="ul-team">
-          <li class="li-team">
-            <img
-              src="./images/mark-guerrero.jpg"
-              alt="mark-guerrero"
-              width="264"
-              height="260"
-            />
-            <div class="text-container">
-              <h3 class="title-many">Mark Guerrero</h3>
-              <p class="inside">Product Designer</p>
-            </div>
-          </li>
-          <li class="li-team">
-            <img
-              src="./images/tom-ford.jpg"
-              alt="tom-ford"
-              width="264"
-              height="260"
-            />
-            <div class="text-container">
-              <h3 class="title-many">Tom Ford</h3>
-              <p class="inside">Frontend Developer</p>
-            </div>
-          </li>
-          <li class="li-team">
-            <img
-              src="./images/camila-garcia.jpg"
-              alt="camila-garcia"
-              width="264"
-              height="260"
-            />
-            <div class="text-container">
-              <h3 class="title-many">Camila Garcia</h3>
-              <p class="inside">Marketing</p>
-            </div>
-          </li>
-          <li class="li-team">
-            <img
-              src="./images/daniel-wilson.jpg"
-              alt="daniel-wilson"
-              width="264"
-              height="260"
-            />
-            <div class="text-container">
-              <h3 class="title-many">Daniel Wilson</h3>
-              <p class="inside">UI Designer</p>
-            </div>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="title-small team-title">Our Team</h2>
+          <ul class="ul-team">
+            <li class="li-team">
+              <img
+                src="./images/mark-guerrero.jpg"
+                alt="mark-guerrero"
+                width="264"
+                height="260"
+              />
+              <div class="text-container">
+                <h3 class="title-many">Mark Guerrero</h3>
+                <p class="inside">Product Designer</p>
+              </div>
+            </li>
+            <li class="li-team">
+              <img
+                src="./images/tom-ford.jpg"
+                alt="tom-ford"
+                width="264"
+                height="260"
+              />
+              <div class="text-container">
+                <h3 class="title-many">Tom Ford</h3>
+                <p class="inside">Frontend Developer</p>
+              </div>
+            </li>
+            <li class="li-team">
+              <img
+                src="./images/camila-garcia.jpg"
+                alt="camila-garcia"
+                width="264"
+                height="260"
+              />
+              <div class="text-container">
+                <h3 class="title-many">Camila Garcia</h3>
+                <p class="inside">Marketing</p>
+              </div>
+            </li>
+            <li class="li-team">
+              <img
+                src="./images/daniel-wilson.jpg"
+                alt="daniel-wilson"
+                width="264"
+                height="260"
+              />
+              <div class="text-container">
+                <h3 class="title-many">Daniel Wilson</h3>
+                <p class="inside">UI Designer</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- endsection 3  -->
       <!-- section 4 -->
